--- a/public/partials/review.html
+++ b/public/partials/review.html
@@ -1,122 +1,124 @@
 {{#reviewMode}}
-  <div id="contents">
-    <div class="buffer"></div>
-    <div id="content-left">
-      <div class="image-wrapper">
-        {{#if (book.coverUrl) }}
-          <div class="image-big">
-            <img src="{{ book.coverUrl }}" class="omtalt-bok"/>
-          </div>
-        {{else}}
-          <div id="omtale-bilde">
-            <div id="inner-border">
-              <div class="book-author">
-                <!-- TODO: book authors separated with comma -->
-                  <!--{{ _.map(book.authors, function(a) { return a.creatorName; }).join(', ') }}-->
-                {{#book.authors }}
-                  {{creatorName}}
-                {{/book.authors }}
-              </div>
-              <div class="book-title">
-                {{ book.title }}
-              </div>
+  <div id="content-left">
+    <div class="image-wrapper">
+      {{#if (book.coverUrl) }}
+        <div class="image-big">
+          <img src="{{ book.coverUrl }}" class="omtalt-bok"/>
+        </div>
+      {{else}}
+        <div id="omtale-bilde">
+          <div id="inner-border">
+            <div class="book-author">
+              <!-- TODO: book authors separated with comma -->
+                <!--{{ _.map(book.authors, function(a) { return a.creatorName; }).join(', ') }}-->
+              {{#book.authors }}
+                {{creatorName}}
+              {{/book.authors }}
             </div>
+            <div class="book-title">
+              {{ book.title }}
+            </div>
+          </div>
+        </div>
+      {{/if}}
+    </div>
+    <div class="ratings"></div>
+  </div>
+  <div id="content-right">
+    {{#if (reviewIndex > 0) }}
+      <div id="left_arrow"><img src="/images/arrow_left_active.png" on-click="previousReview"/></div>
+    {{else}}
+      <div id="left_arrow"><img src="/images/arrow_left_inactive.png" /></div>
+    {{/if}}
+    {{#if (book.localReviews.length > reviewIndex+1) }}
+      <div id="right_arrow"><img src="/images/arrow_right_active.png" on-click="nextReview" /></div>
+    {{else}}
+      <div id="right_arrow"><img src="/images/arrow_right_inactive.png" /></div>
+    {{/if}}
+    <div id="omtale-wrapper">
+      <div id="scroller">
+        {{#if (book.localReviews.length != 0) }}
+            <div>
+                <div class="review">
+                  <h3> {{ book.localReviews[reviewIndex].reviewTitle }} </h3>
+                  <p> {{{ book.localReviews[reviewIndex].reviewText }}} </p>
+                  <p class="source"> {{book.localReviews[reviewIndex].reviewSource}} </p>
+                </div>
+            </div>
+        {{else}}
+          <div class="no-review slide">
+            <p>no reviews ... sorry</p>
           </div>
         {{/if}}
       </div>
-      <div class="ratings"></div>
     </div>
-    <div id="content-right">
-      {{#if (reviewIndex > 0) }}
-        <div id="left_arrow"><img src="/images/arrow_left_active.png" on-click="previousReview"/></div>
-      {{else}}
-        <div id="left_arrow"><img src="/images/arrow_left_inactive.png" /></div>
-      {{/if}}
-      {{#if (book.localReviews.length > reviewIndex+1) }}
-        <div id="right_arrow"><img src="/images/arrow_right_active.png" on-click="nextReview" /></div>
-      {{else}}
-        <div id="right_arrow"><img src="/images/arrow_right_inactive.png" /></div>
-      {{/if}}
-      <div id="omtale-wrapper">
-        <div id="scroller">
-          {{#if (book.localReviews.length != 0) }}
-              <div>
-                  <div class="review">
-                    <h3> {{ book.localReviews[reviewIndex].reviewTitle }} </h3>
-                    <p> {{{ book.localReviews[reviewIndex].reviewText }}} </p>
-                    <p class="source"> {{book.localReviews[reviewIndex].reviewSource}} </p>
-                  </div>
-              </div>
-          {{else}}
-            <div class="no-review slide">
-              <p>no reviews ... sorry</p>
-            </div>
-          {{/if}}
-        </div>
-      </div>
-    </div>
-    <div class="clearfix"></div>
-    <!-- Similar and related books coverflow -->
-    <div id="content-bottom">
-      <div class="flere">
-        {{#if (book.sameAuthorBooks.length != 0) }}
-          <h3>Flere</h3>
-          <!-- TODO: recreate logic: if < 5 show all, else show three and a "more" img -->
-          <!--<% num = book.sameAuthorBooks.length < 5 ? book.sameAuthorBooks.length : 3 %>-->
-          {{#book.sameAuthorBooks:num}}
+  </div>
+  <div class="clearfix"></div>
+  <!-- Similar and related books coverflow -->
+  <div id="content-bottom">
+    <div class="flere">
+      {{#if (book.sameAuthorBooks.length != 0) }}
+        <h3>Flere</h3>
+        <!-- TODO: recreate logic: if < 5 show all, else show three and a "more" img -->
+        <!--<% num = book.sameAuthorBooks.length < 5 ? book.sameAuthorBooks.length : 3 %>-->
+        {{#book.sameAuthorBooks:num}}
+          {{#if (num < 3)}}
             <div class="liste-small">
-              <input type="hidden" class="tnr_id" value="{{bookId}}" />
               <div class="cover-small" on-click="lookupBook">
               {{#if (coverUrl) }}
                   <img src="{{ coverUrl }}" />
               {{else}}
                 <div class="cover-small-missing" >
-                  <!-- TODO: book authors separated with comma -->
-                  <!-- _.map(book.authors, function(a) { return a.creatorName; }).join(', ') %> <strong> {{title}}</strong>-->
+                  <strong> {{ title }} </strong>
                 </div>
               {{/if}}
               </div>
               <p class="title"> <strong> {{title}}</strong> </p>
             </div>
-          {{/book.sameAuthorBooks}}
-          {{#if (sameAuthorBooks.length > 4) }}
-            <a href="/more">
-            <div class="cover-small" on-click="moreAuthorBooks">
-              <div class="cover-small-missing">se mer</div>
+          {{else}}
+            {{#if (num == 3 && book.sameAuthorBooks.length > 5) }}
+              <div class="liste-small">
+                <div class="cover-small" on-click="moreAuthorBooks">
+                  <div class="cover-small-missing">se mer</div>
+                </div>
+              </div>
+            {{/if}}
+          {{/if}}
+        {{/book.sameAuthorBooks}}
+      {{/if}}
+      <p>&nbsp;</p>
+    </div>
+    <div class="relaterte">
+    {{#if (book.similarWorks.length != 0) }}
+      <h3>Relaterte</h3>
+      <!-- TODO: recreate logic: if < 5 show all, else show three and a "more" img -->
+      <!--<% num = book.sameAuthorBooks.length < 5 ? book.sameAuthorBooks.length : 3 %>-->
+      {{#book.similarWorks:num}}
+        {{#if (num < 3)}}
+          <div class="liste-small">
+            {{#if (coverUrl) }}
+              <div class="cover-small" on-click="lookupBook">
+                <img src="{{coverUrl}}"  />
+              </div>
+            {{else}}
+              <div class="cover-small-missing" on-click="lookupBook">
+                <!-- TODO: book authors separated with comma -->
+                <!-- _.map(book.authors, function(a) { return a.creatorName; }).join(', ') %> <strong> {{title}}</strong>-->
+                {{ creatorName }} <strong> {{ title }} </strong>
+              </div>
+            {{/if}}
+            <p class="title"> <strong> {{ title }}</strong> </p>
+          </div>
+        {{else}}
+          {{#if (num == 3 && book.similarWorks.length > 5) }}
+            <div class="liste-small">
+              <div class="cover-small" on-click="moreSimilarBooks">
+                <div class="cover-small-missing">se mer</div>
+              </div>
             </div>
-            </a>
           {{/if}}
         {{/if}}
-        <p>&nbsp;</p>
-      </div>
-      {{#if (book.similarWorks.length != 0) }}
-        <div class="relaterte">
-          <h3>Relaterte</h3>
-          <!-- TODO: recreate logic: if < 5 show all, else show three and a "more" img -->
-          <!--<% num = book.sameAuthorBooks.length < 5 ? book.sameAuthorBooks.length : 3 %>-->
-          {{#book.similarWorks:num}}
-            <div class="liste-small">
-              <input type="hidden" class="tnr_id" value="{{bookId}}" />
-              {{#if (coverUrl) }}
-                <div class="cover-small" on-click="lookupBook">
-                  <img src="{{coverUrl}}"  />
-                </div>
-              {{else}}
-                <div class="cover-small-missing" on-click="lookupBook">
-                  {{ creatorName }} <strong> {{ title }} </strong>
-                </div>
-              {{/if}}
-            <p class="title"> <strong> {{ title }}</strong> </p>
-            </div>
-          {{/book.similarWorks}}
-          {{#if (book.similarWorks.length > 4) }}
-            <a href="/similar" />
-            <div class="cover-small" on-click="moreAuthorBooks">
-              <div class="cover-small-missing">se mer</div>
-            </div>
-          {{/if}}
-        </div>
-      {{/if}}
-      </div>
+      {{/book.similarWorks}}
+    {{/if}}
   </div>
 {{/reviewMode}}
