--- a/src/components/Header.html
+++ b/src/components/Header.html
@@ -37,6 +37,7 @@
 <style>
   #header         { margin-left:400px; height: 100px; width: 1225px; padding-top:35px; }
   #header-text    { float: left; }
+  #search-field   { float: right; }
   .title            { font-size: 2.5em; font-weight: bold; color: #333; }
   .sub-title        { margin-top: 15px;font-size: 1.6em; font-weight: bold; color: #333;}
   .search-input  { border:1px solid gray; margin-top:150px; padding: 10px; text-align: center; font-style: italic; color:#666;}
