--- a/src/components/Review.html
+++ b/src/components/Review.html
@@ -1,121 +1,5 @@
-<div id="content-left">
-  <div class="image-wrapper">
-    {{#if (book.coverUrl) }}
-      <div class="image-big">
-        <img src="{{ book.coverUrl }}" class="omtalt-bok"/>
-      </div>
-    {{else}}
-      <div id="omtale-bilde">
-        <div id="inner-border">
-          <div class="book-author">
-            {{#each book.authors as aut}}
-              {{ aut.creatorName }}
-            {{/each }}
-          </div>
-          <div class="book-title">
-            {{ book.title }}
-          </div>
-        </div>
-      </div>
-    {{/if}}
-  </div>
-  <div class="ratings"></div>
-</div>
-<div id="content-right">
-  {{#if (reviewIndex > 0) }}
-    <div id="left_arrow"><img src="/images/arrow_left_active.png" on-click="previousReview"/></div>
-  {{else}}
-    <div id="left_arrow"><img src="/images/arrow_left_inactive.png" /></div>
-  {{/if}}
-  {{#if (book.localReviews.length > reviewIndex+1) }}
-    <div id="right_arrow"><img src="/images/arrow_right_active.png" on-click="nextReview" /></div>
-  {{else}}
-    <div id="right_arrow"><img src="/images/arrow_right_inactive.png" /></div>
-  {{/if}}
-  <div id="omtale-wrapper">
-    <div id="scroller">
-      {{#if (book.localReviews.length != 0) }}
-          <div>
-              <div class="review">
-                <h3> {{ book.localReviews[reviewIndex].reviewTitle }} </h3>
-                <p> {{{ book.localReviews[reviewIndex].reviewText }}} </p>
-                <p class="source"> {{book.localReviews[reviewIndex].reviewSource}} </p>
-              </div>
-          </div>
-      {{else}}
-        <div class="no-review slide">
-          <p>no reviews ... sorry</p>
-        </div>
-      {{/if}}
-    </div>
-  </div>
-</div>
-<div class="clearfix"></div>
-<!-- Similar and related books coverflow -->
-<div id="content-bottom">
-  <div class="flere">
-    {{#if (book.sameAuthorBooks.length != 0) }}
-      <h3>Flere</h3>
-      <!-- TODO: recreate logic: if < 5 show all, else show three and a "more" img -->
-      <!--<% num = book.sameAuthorBooks.length < 5 ? book.sameAuthorBooks.length : 3 %>-->
-      {{#each book.sameAuthorBooks as sa, idx }}
-        {{#if (idx < 3)}}
-          <div class="liste-small">
-            <div class="cover-small" on-click="lookupBook">
-            {{#if (sa.coverUrl) }}
-                <img src="{{ sa.coverUrl }}" />
-            {{else}}
-              <div class="cover-small-missing" >
-                <strong> {{ sa.title }} </strong>
-              </div>
-            {{/if}}
-            </div>
-            <p class="title"> <strong> {{sa.title}}</strong> </p>
-          </div>
-        {{else}}
-          {{#if (idx === 3 && book.sameAuthorBooks.length > 5) }}
-            <div class="liste-small">
-              <div class="cover-small" on-click="moreAuthorBooks">
-                <div class="cover-small-missing">se mer</div>
-              </div>
-            </div>
-          {{/if}}
-        {{/if}}
-      {{/each}}
-    {{/if}}
-    <p>&nbsp;</p>
-  </div>
-  <div class="relaterte">
-    {{#if (book.similarWorks.length != 0) }}
-      <h3>Relaterte</h3>
-      <!-- TODO: recreate logic: if < 5 show all, else show three and a "more" img -->
-      <!--<% num = book.sameAuthorBooks.length < 5 ? book.sameAuthorBooks.length : 3 %>-->
-      {{#each book.similarWorks as sw, idx}}
-        {{#if (idx < 3)}}
-          <div class="liste-small">
-            {{#if (sw.coverUrl) }}
-              <div class="cover-small" on-click="lookupBook">
-                <img src="{{sw.coverUrl}}"  />
-              </div>
-            {{else}}
-              <div class="cover-small-missing" on-click="lookupBook">
-                <!-- TODO: book authors separated with comma -->
-                <!-- _.map(book.authors, function(a) { return a.creatorName; }).join(', ') %> <strong> {{title}}</strong>-->
-                {{ sw.creatorName }} <strong> {{ sw.title }} </strong>
-              </div>
-            {{/if}}
-            <p class="title"> <strong> {{ sw.title }}</strong> </p>
-          </div>
-        {{else}}
-          {{#if (idx === 3 && book.similarWorks.length > 5) }}
-            <div class="liste-small">
-              <div class="cover-small" on-click="moreSimilarBooks">
-                <div class="cover-small-missing">se mer</div>
-              </div>
-            </div>
-          {{/if}}
-        {{/if}}
-      {{/each}}
-    {{/if}}
-  </div>
+<div class="review" >
+  <h3><slot name='reviewTitle'>Placeholder Review Title</slot></h3>
+  <p> <slot name='reviewText'>placeholder review text bla bla bla</slot></p>
+  <p class="source"><slot name='reviewSource'>placeholder review source</slot></p>
 </div>
