Svelte rewrite II

--- a/src/components/Content.html
+++ b/src/components/Content.html
@@ -1,8 +1,10 @@
 <div id="contents">
   <div class="buffer"></div>
   {{#if (book) }}<Reviews :book />{{/if}}
-  <More />
-  <Similar />
+    <MoreFromAuthor :book/>
+  <!--
+    <SimilarWorks />
+  -->
 </div>
 
 <script>
