--- a/src/components/MoreFromAuthor.html
+++ b/src/components/MoreFromAuthor.html
@@ -7,7 +7,7 @@
         <hr style="width:100%;" />
         <div class="liste-bilde">
           {{#if (bsa.coverUrl) }}
-            <img src="{{ coverUrl }}" class="listevisning" />
+            <img src="{{ bsa.coverUrl }}" class="listevisning" />
           {{else}}
             <div id="omtale-bilde-liste">
               <div id="inner-border-liste">
