--- a/src/components/LeftBar.html
+++ b/src/components/LeftBar.html
@@ -1,10 +1,10 @@
 <div id="left-bar">
   <div class="logo"><img src="/images/logo.png" class="logo" /></div>
-  <button id="random" class="square" on-click="randomBook">SNURR</button>
+  <button id="random" class="square" on:click='fire("snurr")'>SNURR</button>
   {{#if (history.length > 0) }}
-    <button id="tilbake" class="square" on-click="previousBook"><img src="/images/tilbake.png" id="tilbake-pil"/>TILBAKE</button>
+    <button id="tilbake" class="square" on:click="previousBook()"><img src="/images/tilbake.png" id="tilbake-pil"/>TILBAKE</button>
     <div id="avslutt-container">
-      <button id="avslutt" class="square" on-click="close">
+      <button id="avslutt" class="square" on:click='close()'>
         <span>AVSLUTT <img src="/images/avslutt.png" id="avslutt-ikon" /></span>
       </button>
     </div>
@@ -15,31 +15,23 @@
     data: () => ({
       bookStable: []
     }),
-    // Events?
+    // Events? yup
     methods: {
       previousBook: function(event) {
-        bookStable.pop();            // remove one from stack
-        var book = bookStable[bookStable.length - 1];   // select last
-        console.log(book);
-        headerRactive.set({title: book.title, authors: book.authors});
-        contentsRactive.set({book: book});
-      },
-      randomBook: function(event) {
-        console.log("choosing random book...");
-        $.ajax("/random").done(function(book) {
-          console.log("found book!")
-          headerRactive.set({title: book.title, authors: book.authors});
-          contentsRactive.fire("lookupBook", {}, book);
-        });
+        this.bookStable.pop()                                     // remove one from stack
+        var book = this.get( bookStable[bookStable.length - 1] )  // select last
+        console.log(book)
+        headerRactive.set({title: book.title, authors: book.authors})
+        contentsRactive.set({book: book})
       },
       close: function(event) {
-        console.log(event);
-        var book = bookStable.shift();
-        console.log(book);
-        leftbarRactive.data.bookStable = [];
-        leftbarRactive.data.bookStable.push(book);
-        headerRactive.set({title: book.title, authors: book.authors});
-        contentsRactive.set({book: book});
+        console.log(event)
+        var book = bookStable.shift()
+        console.log(book)
+        this.set({ bookStable: [] })
+        this.bookStable.push(book)
+        headerRactive.set({title: book.title, authors: book.authors})
+        contentsRactive.set({book: book})
       }
     }
   }
