--- a/src/components/SimilarWorks.html
+++ b/src/components/SimilarWorks.html
@@ -1,14 +1,13 @@
 <div id="liste-wrapper">
   <ul class="listevisning">
-    shit
-     {{#each book.similarWorks as sw}}
+    {{#each book.similarWorks as sw}}
       <li on-click="lookupBook">
         <p class="liste-tittel">{{ sw.title }}</p>
         <p class="liste-forfatter">{{ sw.authors }}</p>
         <hr style="width:100%;" />
         <div class="liste-bilde">
           {{#if (sw.coverUrl) }}
-            <img src="{{ coverUrl }}" class="listevisning" />
+            <img src="{{ sw.coverUrl }}" class="listevisning" />
           {{else}}
             <div id="omtale-bilde-liste">
               <div id="inner-border-liste">
