--- a/src/components/Reviews.html
+++ b/src/components/Reviews.html
@@ -52,119 +52,21 @@
 </div>
 <div class="clearfix"></div>
 <!-- Similar and related books coverflow -->
-<div id="content-bottom">
-  <div class="flere">
-    {{#if (book.sameAuthorBooks.length > 0) }}
-      <h3>Flere</h3>
-      <!-- TODO: recreate logic: if < 5 show all, else show three and a "more" img -->
-      <!--<% num = book.sameAuthorBooks.length < 5 ? book.sameAuthorBooks.length : 3 %>-->
-      {{#each book.sameAuthorBooks as sa, idx }}
-        {{#if (idx < 3)}}
-          <div class="liste-small">
-            <div class="cover-small" on:click='lookupBook(sa)'>
-            {{#if (sa.coverUrl) }}
-                <img src="{{ sa.coverUrl }}" />
-            {{else}}
-              <div class="cover-small-missing" >
-                <strong> {{ sa.title }} </strong>
-              </div>
-            {{/if}}
-            </div>
-            <p class="title"> <strong> {{sa.title}}</strong> </p>
-          </div>
-        {{else}}
-          {{#if (idx === 3 && book.sameAuthorBooks.length > 5) }}
-            <div class="liste-small">
-              <div class="cover-small" on:click='moresameAuthorBooks(sa)'>
-                <div class="cover-small-missing">se mer</div>
-              </div>
-            </div>
-          {{/if}}
-        {{/if}}
-      {{/each}}
-    {{/if}}
-    <p>&nbsp;</p>
-  </div>
-  <div class="relaterte">
-    {{#if (book.similarWorks.length > 0) }}
-      <h3>Relaterte</h3>
-      <!-- TODO: recreate logic: if < 5 show all, else show three and a "more" img -->
-      <!--<% num = book.sameAuthorBooks.length < 5 ? book.sameAuthorBooks.length : 3 %>-->
-      {{#each book.similarWorks as sw, idx}}
-        {{#if (idx < 3)}}
-          <div class="liste-small">
-            {{#if (sw.coverUrl) }}
-              <div class="cover-small" on:click='lookupBook(sw)'>
-                <img src="{{sw.coverUrl}}"  />
-              </div>
-            {{else}}
-              <div class="cover-small-missing" on:click='lookupBook(sw)'>
-                <!-- TODO: book authors separated with comma -->
-                <!-- _.map(book.authors, function(a) { return a.creatorName; }).join(', ') %> <strong> {{title}}</strong>-->
-                {{ sw.creatorName }} <strong> {{ sw.title }} </strong>
-              </div>
-            {{/if}}
-            <p class="title"> <strong> {{ sw.title }}</strong> </p>
-          </div>
-        {{else}}
-          {{#if (idx === 3 && book.similarWorks.length > 5) }}
-            <div class="liste-small">
-              <div class="cover-small" on:click='moreSimilarWorks(sw)'>
-                <div class="cover-small-missing">se mer</div>
-              </div>
-            </div>
-          {{/if}}
-        {{/if}}
-      {{/each}}
-    {{/if}}
-  </div>
-</div>
+<CoverFlow :book on:sameAuthorMode />
+
 <script>
   import Review from './Review.html'
+  import CoverFlow from './CoverFlow.html'
   import { doGetRequest } from '../utils/utils.js'
   export default {
     components: {
-      Review
+      Review,
+      CoverFlow
     },
     data: () => ({
       reviewIndex: 0
     }),
     methods: {
-      doGetRequest: doGetRequest,
-      lookupBook: function(book) {
-        console.log(book)
-        // TODO: Rewrite into ractive
-        // show overlay
-        //$('button#retry-knapp').hide();
-        //$('#overlay').show();
-        //$('button#avbryt-knapp').html('Avbryt');
-        //$('div#vi-leter p').html("Henter info om \"" + title + '" <div id="loading"></div>' );
-        //$('#vi-leter').show();
-        doGetRequest(`/populate/${book.bookId}`)
-        .then(res => {
-          console.log(res);
-          this.set({book: response, reviewIndex: 0, reviewMode: true, moreFromAuthorMode: false, similarWorkMode: false});
-          var authors = [];
-          // comma, separated authors list
-          response.authors.forEach(function(a) {
-            authors.push(a.creatorName);
-          });
-          headerRactive.set({title: response.title, authors: authors.join(', ') });
-          // save to history
-          leftbarRactive.data.bookStable.push(response);
-          $('#overlay').hide();
-          $('#vi-leter').hide();
-        })
-        .catch(err => {
-          console.log(err)
-          $('div#vi-leter p').html('&#9760; Beklager, dette tok for lang tid!' );
-          $('button#retry-knapp').show();
-        })
-      },
-      moresameAuthorBooks (sa) {
-        console.dir(sa)
-        this.set({reviewMode: false, moreFromAuthorMode: true, similarWorkMode: false});
-      },
       moreSimilarWorks (sw) {
         console.dir(sw)
         this.set({reviewMode: false, moreFromAuthorMode: false, similarWorkMode: true});
