--- a/src/components/Content.html
+++ b/src/components/Content.html
@@ -1,10 +1,12 @@
 <div id="contents">
   <div class="buffer"></div>
-  {{#if (book) }}<Reviews :book />{{/if}}
-    <MoreFromAuthor :book/>
-  <!--
-    <SimilarWorks />
-  -->
+  {{#if (book) }}
+    {{#if (reviewMode) }}
+      <Reviews :book on:sameAuthorMode="setSameAuthorMode()" on:similarWorkMode="setSimilarWorkMode()"/>
+    {{/if}}
+    {{#if (sameAuthorMode) }} <MoreFromAuthor :book />{{/if}}
+    {{#if (similarWorkMode) }}<SimilarWorks :book />{{/if}}
+  {{/if}}
 </div>
 
 <script>
@@ -16,6 +18,23 @@
       Reviews,
       MoreFromAuthor,
       SimilarWorks
+    },
+    data: () => ({
+      reviewMode: true,
+      sameAuthorMode: false,
+      similarWorkMode: false
+    }),
+    props: ['book'],
+    methods: {
+      setReviewMode: function() {
+        this.set({reviewMode: true, sameAuthorMode: false, similarWorkMode: false})
+      },
+      setSameAuthorMode: function() {
+        this.set({reviewMode: false, sameAuthorMode: true, similarWorkMode: false})
+      },
+      similarWorkMode: function() {
+        this.set({reviewMode: false, sameAuthorMode: false, similarWorkMode: true})
+      }
     }
   }
 </script>
